# VulkanEngine

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt
scripts/: buildProjectFiles.bat  compileShaders.bat  installDeps.bat
src/: main.cpp
src/app/: debugMessenger.cpp  debugMessenger.hpp  helloTriangleApp.cpp  helloTriangleApp.hpp
src/graphics/vulkan/: pipeline.cpp  pipeline.hpp  queue.cpp  queue.hpp  swapchain.cpp  swapchain.hpp
src/math/: uniform.cpp  uniform.hpp  vectors.hpp  vertex.cpp  vertex.hpp
src/shaders/: base.frag  base.vert
